--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,13 @@
     package="com.paulaumann.nutrients">
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".plan.MainPlanActivity" />
-        <activity android:name=".plan.NewEntryActivity" />
-        <activity android:name=".history.HistoryActivity" />
-        <activity android:name=".dbviewer.DBViewerActivity" />
-        <activity android:name=".dbviewer.DBAddEntryActivity" />
-        <activity android:name=".nutrients.NutrientsActivity" />
-        <activity android:name=".util.FoodActivity" />
-        <activity android:name=".util.TodoActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
